Make sure Launcher button & panel are not visible until their styles are loaded

--- a/src/main/resources/assets/styles/launcher.less
+++ b/src/main/resources/assets/styles/launcher.less
@@ -9,7 +9,7 @@
 
 .launcher-button {
   font-family: 'Open Sans Bold', sans-serif;
-  display: flex;
+  display: flex !important;
   justify-content: center;
   visibility: hidden;
   opacity: 0;
@@ -300,6 +300,7 @@
 }
 
 .launcher-panel {
+  display: block !important;
   position: fixed;
   box-shadow: none;
   top: 0;
